--- a/F_BMS/add-on/config.json
+++ b/F_BMS/add-on/config.json
@@ -1,10 +1,10 @@
 {
-  "name": "BMS Unified Platform",
+  "name": "BMS Unified Platform @fahad0x1",
   "version": "1.0.0",
   "slug": "bms_unified_platform",
   "description": "A Building Management System powered by Flask and integrated with Home Assistant.",
   "arch": ["aarch64", "amd64", "armhf", "armv7", "i386"],
-  "url": "https://github.com/YOUR_GITHUB_USERNAME/YOUR_REPOSITORY_NAME",
+  "url": "https://github.com/Fahad0x1/fahad0x",
   "startup": "application",
   "ports": {
     "5000/tcp": 5000
@@ -22,4 +22,5 @@
     "HA_TOKEN": ""
   },
   "panel_icon": "mdi:home-assistant"
+
 }
