--- a/F_BMS/add-on/Dockerfile
+++ b/F_BMS/add-on/Dockerfile
@@ -1,6 +1,5 @@
 FROM python:3.10-slim-buster
 
-# تثبيت الحزم الأساسية لنظام التشغيل اللازمة لـ OpenCV
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libgl1-mesa-glx \
     libsm6 \
@@ -18,20 +17,20 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libgtk2.0-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# نسخ الملفات الأساسية للمشروع
-COPY requirements.txt /app/
-COPY app.py /app/
-COPY templates/ /app/templates/
 
-# تثبيت مكتبات بايثون
+COPY ../requirements.txt /app/
+COPY ../app.py /app/
+COPY ../templates/ /app/templates/
+
+
 WORKDIR /app
 RUN pip install --no-cache-dir -r requirements.txt
 
 # إعدادات الإضافة
-COPY add-on/config.json /data/config.json
+COPY config.json /data/config.json
 
-# نسخ السكريبت الذي يشغل التطبيق
-COPY add-on/rootfs/run.sh /usr/bin/run.sh
+
+COPY rootfs/run.sh /usr/bin/run.sh
 RUN chmod a+x /usr/bin/run.sh
 
 # فتح البورت
