--- a/F_BMS/Dockerfile
+++ b/F_BMS/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.10-slim-buster
 
-# تثبيت الحزم الأساسية لنظام التشغيل اللازمة لـ OpenCV
+# تثبيت الحزم الأساسية لنظام التشغيل
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libgl1-mesa-glx \
     libsm6 \
@@ -22,16 +22,17 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 COPY requirements.txt /app/
 COPY app.py /app/
 COPY templates/ /app/templates/
+COPY unified_platform.db /data/
 
 # تثبيت مكتبات بايثون
 WORKDIR /app
 RUN pip install --no-cache-dir -r requirements.txt
 
 # إعدادات الإضافة
-COPY add-on/config.json /data/config.json
+COPY config.json /data/config.json
 
 # نسخ السكريبت الذي يشغل التطبيق
-COPY add-on/rootfs/run.sh /usr/bin/run.sh
+COPY rootfs/run.sh /usr/bin/run.sh
 RUN chmod a+x /usr/bin/run.sh
 
 # فتح البورت
